[tool.poetry]
name = "bubot"
version = "0.1.0"
description = "Bot for budget table"
authors = ["k-mickey <kokmickey@yandex.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.13.0"
aiogramstorages = "^1.0.0"
environs = "^11.0.0"
oauth2client = "^4.1.3"
google-api-python-client = "^2.147.0"
aiogram-calendar = "^0.5.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
blue = "^0.9.1"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
